gdk: define GdkRectangle structure for introspection scanning

https://bugzilla.gnome.org/show_bug.cgi?id=748833